--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <h2 class="main-title">Popular Dishes</h2>
           <div class="detail-wrapper">
             <div class="detail-card">
-              <img class="detail-img" src="images/soup.jpg" alt="Soup" />
+              <img class="detail-img" src="aditi-host/images/soup.jpg" alt="Soup" />
               <div class="detail-desc">
                 <div class="detail-name">
                   <h4>Soup</h4>
